src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACH_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACLI_ID__c</fullName>
        <label>ACLI ID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACLI_SAP_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The account&apos;s SAP ID as received in the ACLI file.</description>
        <label>ACLI Customer Number (SAP)</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACLI_Status__c</fullName>
        <label>ACLI Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive Company</fullName>
                </value>
                <value>
                    <fullName>Active Company</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFRD_Date__c</fullName>
        <label>AFRD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AFRD_Status__c</fullName>
        <label>AFRD Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Pending customer</fullName>
                </value>
                <value>
                    <fullName>Pending ICCS</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIMS_ID__c</fullName>
        <externalId>true</externalId>
        <label>AIMS ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AMS_PWC_INT_DEFNONPAY__c</fullName>
        <label>AMS PWC INT DEFNONPAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMS_PWC_INT_DEF__c</fullName>
        <label>AMS PWC INT DEF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMS_PWC_INT_IRRS__c</fullName>
        <label>AMS PWC INT IRRS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMS_PWC_INT_OWNSHA_CHANGE__c</fullName>
        <label>AMS PWC INT OWNSHA CHANGE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_PWC_INT_OWNSHA_LASTDATE__c</fullName>
        <label>AMS PWC INT OWNSHA LASTDATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AM_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This link to the user playing the role of Account Manager for the account. Used to define the account managers for Airline Headquarters for the Account Management project.</description>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts_Managed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_Ownership_Type__c</fullName>
        <description>This field describes the entities owning the account. Used by the Account Management project, for Airline Headquarters.</description>
        <label>Ownership Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Privately-held</fullName>
                </value>
                <value>
                    <fullName>Publically-held</fullName>
                </value>
                <value>
                    <fullName>Government-held</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Accreditation_Model__c</fullName>
        <description>To store Accreditation Model selected by the agency.</description>
        <label>Accreditation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ANG_Accreditation_Models</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_CashCondition__c</fullName>
        <formula>IF(ANG_FA_Opt_out__c,true,
   IF(ISPICKVAL(ANG_Accreditation_Model__c, &apos;Cashless&apos;) ||ISPICKVAL(Top_Parent__r.ANG_Accreditation_Model__c, &apos;Cashless&apos;),false,
      IF(ISPICKVAL(Location_Type__c ,&apos;HE&apos;), ANG_HE_CashCondition__c,Top_Parent__r.ANG_HE_CashCondition__c)
   ))</formula>
        <inlineHelpText>Indicates that the RHC Amount is equal to the Guaranteed Amount. Will be enforced only if the agency has a FS</inlineHelpText>
        <label>Cash Condition equal to FS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_FA_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Financial Assessment opt-out flag for Newgen - this means if the Agent opted out from Financial Review.</description>
        <inlineHelpText>Financial Assessment opt-out flag for Newgen - this means if the Agent opted out from Financial Review.</inlineHelpText>
        <label>Financial Assessment opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_HE_CashCondition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Condition HE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_HE_RiskHistoryAssessment__c</fullName>
        <label>Risk History Assessment HE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ANG_HE_RiskHistoryAssessment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_HE_RiskStatus__c</fullName>
        <label>Risk Status HE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ANG_Risk_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_IEP_Account_Number__c</fullName>
        <formula>IF(OR(ISPICKVAL(Location_Type__c ,&apos;HE&apos;),ISPICKVAL(Location_Type__c ,&apos;HO&apos;),ISPICKVAL(Location_Type__c ,&apos;AO&apos;),Is_Branch_Abroad__c = &apos;Yes&apos;), ANG_IEP_HE_AccntNum__c,Top_Parent__r.ANG_IEP_HE_AccntNum__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IEP Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_IEP_HE_AccntNum__c</fullName>
        <description>To store HE EasyPay Account Number</description>
        <externalId>true</externalId>
        <inlineHelpText>EasyPay Account Number</inlineHelpText>
        <label>IEP HE Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_IEP_Status_FF__c</fullName>
        <description>To show analysts information about Easy Pay’s account status</description>
        <formula>IF(OR(ISPICKVAL(Location_Type__c ,&apos;HE&apos;),ISPICKVAL(Location_Type__c ,&apos;HO&apos;),ISPICKVAL(Location_Type__c ,&apos;AO&apos;),Is_Branch_Abroad__c = &apos;Yes&apos;), TEXT(ANG_IEP_Status__c), TEXT(Top_Parent__r.ANG_IEP_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IEP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_IEP_Status__c</fullName>
        <description>To store HE easy pay status</description>
        <label>IEP HE Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No IEP Account</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Rejected by IEP Supplier</fullName>
                </value>
                <value>
                    <fullName>Closed – 2-year freeze period</fullName>
                </value>
                <value>
                    <fullName>Closed – 3-month freeze period</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Rejected by IATA compliance team</fullName>
                </value>
                <value>
                    <fullName>Declined by Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_IsNewGenAgency__c</fullName>
        <description>To show information to analyst. To simplify triggers and classes.</description>
        <formula>(IATA_ISO_Country__r.ANG_Enable_NewGen__c  &amp;&amp;  OR(TEXT(Location_Class__c) = &apos;P&apos;, TEXT(Location_Class__c) = &apos;D&apos;)) || (IATA_ISO_Country__r.Enable_NewGen_Pilot__c &amp;&amp; OR(TEXT(Location_Type__c) = &apos;HE&apos;, TEXT(Location_Type__c) = &apos;AE&apos;, TEXT(Location_Type__c) = &apos;GE&apos;) &amp;&amp; TEXT(Location_Class__c) = &apos;D&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is New Gen Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Limit_Cash_Condition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers Cash Condition throught risk Status assessment</description>
        <label>Limit Cash Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_PCI_compliance_expiry_date__c</fullName>
        <description>PCI compliance expiry date</description>
        <label>PCI compliance expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ANG_RiskHistoryAssessment__c</fullName>
        <formula>IF(ISPICKVAL(ANG_Accreditation_Model__c, &apos;Cashless&apos;) || ISPICKVAL(Top_Parent__r.ANG_Accreditation_Model__c, &apos;Cashless&apos;),
    &apos;Not Applicable&apos;,
    IF(ISPICKVAL(Location_Type__c, &apos;HE&apos;),
        TEXT(ANG_HE_RiskHistoryAssessment__c),
		IF(ISPICKVAL(ANG_Accreditation_Model__c, &apos;&apos;),
			&apos;&apos;,		
			TEXT(Top_Parent__r.ANG_HE_RiskHistoryAssessment__c)
        )
    )
)</formula>
        <label>Risk History Assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_RiskStatus__c</fullName>
        <formula>IF(ISPICKVAL(ANG_Accreditation_Model__c, &apos;Cashless&apos;) || ISPICKVAL(Top_Parent__r.ANG_Accreditation_Model__c, &apos;Cashless&apos;) || ANG_FA_Opt_out__c,
    &apos;Not Applicable&apos;,
	IF(ISPICKVAL(Location_Type__c ,&apos;HE&apos;),
		TEXT(ANG_HE_RiskStatus__c),
		IF(ISPICKVAL(ANG_Accreditation_Model__c, &apos;&apos;),
			&apos;&apos;,			
			TEXT(Top_Parent__r.ANG_HE_RiskStatus__c)
		)
	)
)</formula>
        <label>Risk Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOC_Expiry_Date__c</fullName>
        <label>AOC Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASP_Effective_Date__c</fullName>
        <description>This represents the date when the Authorized Signatory Package was last updated.</description>
        <label>ASP Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ATC_code__c</fullName>
        <description>Three-digit code used by ITDI to identify the Authorized Training Centers. To be used in integration. Not necessary in Page Layouts</description>
        <label>ATC code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Code__c</fullName>
        <label>A Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abbreviated_address__c</fullName>
        <label>Abbreviated address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abbreviated_name__c</fullName>
        <label>Abbreviated name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accelerated_Settlement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accelerated Settlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Role__c</fullName>
        <description>The roles covered by the account (e.g. Payment Provider)</description>
        <inlineHelpText>The roles covered by the account</inlineHelpText>
        <label>Account Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Payment Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Indicates the type of stakeholder in terms of its importance for IATA. FOR MORE DETAILS CONTACT AMT</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Airline Industry</fullName>
                </value>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>ATC</fullName>
                </value>
                <value>
                    <fullName>Attorneys</fullName>
                </value>
                <value>
                    <fullName>CAA</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Cargo Airline</fullName>
                </value>
                <value>
                    <fullName>CASS Associates</fullName>
                </value>
                <value>
                    <fullName>Clearing Bank</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Credit Card Company</fullName>
                </value>
                <value>
                    <fullName>Customer Associations</fullName>
                </value>
                <value>
                    <fullName>Domestic Agent</fullName>
                </value>
                <value>
                    <fullName>DPC</fullName>
                </value>
                <value>
                    <fullName>ERSP Agent</fullName>
                </value>
                <value>
                    <fullName>Financial Institution</fullName>
                </value>
                <value>
                    <fullName>Fuel</fullName>
                </value>
                <value>
                    <fullName>GDS / CRS</fullName>
                </value>
                <value>
                    <fullName>General Public</fullName>
                </value>
                <value>
                    <fullName>GSA Cargo</fullName>
                    <isActive>false</isActive>
                    <label>GSA Cargo</label>
                </value>
                <value>
                    <fullName>GSA General Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Handling Agent</fullName>
                </value>
                <value>
                    <fullName>IATA Cargo Agent</fullName>
                </value>
                <value>
                    <fullName>IATA Head Office</fullName>
                    <isActive>false</isActive>
                    <label>IATA Head Office</label>
                </value>
                <value>
                    <fullName>IATA Local Office</fullName>
                </value>
                <value>
                    <fullName>IATA Passenger Sales Agent</fullName>
                </value>
                <value>
                    <fullName>IATA Regional Office</fullName>
                    <isActive>false</isActive>
                    <label>IATA Regional Office</label>
                </value>
                <value>
                    <fullName>Inspector</fullName>
                </value>
                <value>
                    <fullName>Key Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_code_secondary_flag__c</fullName>
        <label>Account code secondary flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Three letter Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_date__c</fullName>
        <label>Accreditation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accumulated_Irregularities__c</fullName>
        <label>Accumulated Irregularities</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Guarantees__c</fullName>
        <inlineHelpText>Count of all active financial securities under this account</inlineHelpText>
        <label>Active Guarantees</label>
        <summaryFilterItems>
            <field>Financial_Security__c.Security_Status__c</field>
            <operation>equals</operation>
            <value>Active, Close to Expiry Date</value>
        </summaryFilterItems>
        <summaryForeignKey>Financial_Security__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Admission_Date__c</fullName>
        <label>Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agent_Global_HQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used by AGM to track the accounts for companies with presence worldwide.</description>
        <label>Agent Global HQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Type_Code__c</fullName>
        <formula>IF(OR(ISPICKVAL(Type,&apos;IATA Passenger Sales Agent&apos;),ISPICKVAL(Type,&apos;Domestic Agent&apos;)), &apos;P&apos;, IF(OR(ISPICKVAL(Type,&apos;IATA Cargo Agent&apos;),ISPICKVAL(Type,&apos;CASS Associates&apos;)), &apos;C&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_BSP_Participations__c</fullName>
        <description>Number of active BSP Services Rendered where the customer is either the airline HQ or one of its branches.</description>
        <label>Total BSP Participations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airline_CASS_Participations__c</fullName>
        <description>Number of active CASS Services Rendered where the customer is either the airline HQ or one of its branches.</description>
        <label>Total CASS Participations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airline_Code__c</fullName>
        <label>Airline Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Model_Type__c</fullName>
        <label>Airline Business Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Service Carrier</fullName>
                </value>
                <value>
                    <fullName>Low Cost Carrier</fullName>
                </value>
                <value>
                    <fullName>Leisure Carrier</fullName>
                </value>
                <value>
                    <fullName>Hybrid Carrier</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airline_Prefix__c</fullName>
        <label>Airline Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Search_Field__c</fullName>
        <formula>IATACode__c&amp;Airline_designator__c&amp;Site &amp; &apos; &apos; &amp;
IATACode__c&amp;Site&amp;Airline_designator__c &amp; &apos; &apos; &amp;
Site&amp;IATACode__c&amp;Airline_designator__c &amp; &apos; &apos; &amp;
Site&amp;Airline_designator__c &amp;IATACode__c&amp; &apos; &apos; &amp;
Airline_designator__c &amp;Site&amp;IATACode__c&amp; &apos; &apos; &amp;
Airline_designator__c &amp;IATACode__c&amp;Site</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline Search Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_designator__c</fullName>
        <description>Field used for the airline designator code e.g. BA</description>
        <label>IATA Designator</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_at_Risk__c</fullName>
        <description>Theoretical Guarantee agent&apos;s should have</description>
        <label>Amount at Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Renewal_Certificates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Renewal of Certificates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anti_Money_Laundering_Compliance_Date__c</fullName>
        <label>Anti-Money Laundering Compliance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anti_Money_Laundering_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anti-Money Laundering Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_of_Operation__c</fullName>
        <label>Area of Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>International only</fullName>
                </value>
                <value>
                    <fullName>Domestic only</fullName>
                </value>
                <value>
                    <fullName>International and Domestic</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Performed_Date__c</fullName>
        <description>Used to copy the last one from the case IATA FINANCIAL REVIEW IFAP</description>
        <label>Last Assessment Performed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Template_Code__c</fullName>
        <formula>Assessment_Template__r.Template_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Template Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Template</label>
        <referenceTo>Assessment_Template__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Training_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes an aviation training center authorized by IATA&apos;s Training and Development Institute ITDI.
This field is kept up-to-date with the feedback of ITDI at least twice a year during the ATC Spring and Fall promotions.</description>
        <label>Authorized Training Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIETA_Bilateral_Date__c</fullName>
        <label>BIETA Bilateral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIETA_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BIETA Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIETA_One_way_Electronic_Issuing_Airline__c</fullName>
        <label>BIETA One way Electronic Issuing Airline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIETA_One_way_Electronic_Participating__c</fullName>
        <label>BIETA One way Electronic Participating</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIETA_One_way_Intermodal_Issuing_Airline__c</fullName>
        <label>BIETA One way Intermodal Issuing Airline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIETA_One_way_Intermodal_Participating__c</fullName>
        <label>BIETA One way Intermodal Participating</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSPCountry_del__c</fullName>
        <label>BSP Participant in</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>All European BSPs</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Islands</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo (Brazzaville)</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Cote d&apos;Ivoire</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSP_CASS_Code__c</fullName>
        <label>BSP/CASS Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSP_CI_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BSP CI Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSP_Expired_Date__c</fullName>
        <label>BSP Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSP_FOC_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BSP FOC Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSP_Name__c</fullName>
        <formula>IATA_ISO_Country__r.Name</formula>
        <label>BSP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSP_Participant_formula__c</fullName>
        <formula>IF( BSP_Participant_value__c &gt; 0, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Airline participating in this BSP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSP_Participant_in_new__c</fullName>
        <description>Reflects the BSP the airline is participating in.</description>
        <label>BSP Participant in (new)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>BZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CG</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>CK</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSP_Participant_value__c</fullName>
        <description>Roll-up to count the active BSP participation services rendered where the account is the Consumer</description>
        <label>BSP Participant value</label>
        <summaryFilterItems>
            <field>Services_Rendered__c.Services_Rendered_Type__c</field>
            <operation>equals</operation>
            <value>BSP Participation, BSP Participation, BSP via IBCS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Services_Rendered__c.Services_Rendered_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Services_Rendered__c.Services_Rendered_to_Airline__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>